--- a/EntityWPFChat/MainWindow.xaml
+++ b/EntityWPFChat/MainWindow.xaml
@@ -44,6 +44,7 @@
             <RowDefinition Height="30"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
@@ -58,22 +59,34 @@
 
 
         <!--<Label BorderBrush="Snow" BorderThickness="1" Grid.Row="1">Select User:</Label>-->
-        <DataGrid Opacity="0.8" SelectionChanged="UsersFrom_SelectionChanged" Background="Transparent" Padding="10" HorizontalScrollBarVisibility="Disabled" IsReadOnly="True" HeadersVisibility="None" Name="UsersFrom" Grid.Row="1" Grid.RowSpan="2" ItemsSource="{Binding Path=People}">
-
-            
-            
-            <DataGrid.RowDetailsTemplate>
+        <ListBox Opacity="0.8" SelectionChanged="UsersFrom_SelectionChanged" Background="Transparent" Padding="10" Name="UsersFrom" Grid.Row="1" Grid.RowSpan="2">
+            <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Controls:Badged Name="BadgedMessageCounter" HorizontalAlignment="Center" Width="140" Margin="-13"  Badge="{Binding Path=MessageCount}" BadgePlacementMode="TopRight">
-                        <Label Width="10" HorizontalAlignment="Center" Content="{Binding Path=People.Name}" />
+                    <!--<TextBlock Text="{Binding Name}"></TextBlock>-->
+                   
+                    <Controls:Badged Name="BadgedMessageCounter" HorizontalAlignment="Center" Width="140" Margin="-5,0,0,0"  Badge="{Binding Path=MessageCount}" BadgePlacementMode="Right">
+                        <TextBlock Text="{Binding Name}"></TextBlock>
                     </Controls:Badged>
                 </DataTemplate>
-            </DataGrid.RowDetailsTemplate>
+            </ListBox.ItemTemplate>
 
-        </DataGrid>
+        </ListBox>
+
+        <ListBox SelectedIndex="0" VerticalAlignment="Bottom" Opacity="0.8" SelectionChanged="RoomsFrom_SelectionChanged" Background="Transparent" Padding="10" Name="RoomsFrom" Grid.Row="3" Grid.RowSpan="1">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"></TextBlock>
+                    <!--<Controls:Badged Name="BadgedMessageCounter" HorizontalAlignment="Center" Width="140" Margin="-13"  Badge="{Binding Path=MessageCount}" BadgePlacementMode="TopRight">
+                        <Label Width="10" HorizontalAlignment="Center" Content="{Binding Name}" />
+                    </Controls:Badged>-->
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+
+        </ListBox>
+
         <!--<DataGrid Name="UsersTo" Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" ItemsSource="{Binding Path=People}" BorderBrush="Snow" BorderThickness="1"></DataGrid>-->
 
-        <ScrollViewer Background="Transparent" Name="Scroll" Grid.RowSpan="3" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5">
+        <ScrollViewer Background="Transparent" Name="Scroll" Grid.RowSpan="3" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6">
 
             <ListView SelectionChanged="ListViewMessages_SelectionChanged" Background="Transparent" Foreground="Transparent" Name="ListViewMessages">
 
@@ -111,18 +124,19 @@
                 </ListView.ItemTemplate>
 
             </ListView>
+            
         </ScrollViewer>
 
         <!--<Image Margin="50" Grid.RowSpan="10" Grid.ColumnSpan="10" Name="ImageBackgroud" Source="https://vignette.wikia.nocookie.net/surrealmemes/images/1/17/Flawless_picardia_by_epycwyn-dbkbyfq.png/revision/latest?cb=20180418235839"></Image>-->
 
-        <TextBox KeyDown="TextBoxMain_KeyDown" Opacity="0.9" Name="TextBoxMain" TextWrapping="Wrap" Grid.Row="4" Grid.ColumnSpan="5" FontSize="15" Controls:TextBoxHelper.WatermarkWrapping="WrapWithOverflow"></TextBox>
-        <Button Opacity="0.9" Grid.Row="4" Grid.Column="5" FontSize="12" Click="Button_Click">Send</Button>
-        <Button Opacity="0.9" Name="ButtonUpdate" Click="ButtonUpdate_Click" FontSize="40" Padding="0,-15,0,-6" Grid.Row="4" Grid.Column="3" >⟳</Button>
-        <Button Opacity="0.9" Name="ButtonPhoto" Click="ButtonPhoto_Click" FontSize="25" Padding="0,0,0,0" Grid.Row="4" Grid.Column="4" >🔗</Button>
-        <Button Opacity="0.9" Name="ButtonDelete" Visibility="Collapsed" Click="ButtonDelete_Click" FontSize="25" Padding="0,0,0,0" Grid.Row="4" Grid.Column="2" >🗑</Button>
+        <TextBox KeyDown="TextBoxMain_KeyDown" Opacity="0.9" Name="TextBoxMain" TextWrapping="Wrap" Grid.Row="5" Grid.ColumnSpan="5" FontSize="15" Controls:TextBoxHelper.WatermarkWrapping="WrapWithOverflow"></TextBox>
+        <Button Opacity="0.9" Grid.Row="5" Grid.Column="5" FontSize="12" Click="Button_Click">Send</Button>
+        <Button Opacity="0.9" Name="ButtonUpdate" Click="ButtonUpdate_Click" FontSize="40" Padding="0,-15,0,-6" Grid.Row="5" Grid.Column="3" >⟳</Button>
+        <Button Opacity="0.9" Name="ButtonPhoto" Click="ButtonPhoto_Click" FontSize="25" Padding="0,0,0,0" Grid.Row="5" Grid.Column="4" >🔗</Button>
+        <Button Opacity="0.9" Name="ButtonDelete" Visibility="Collapsed" Click="ButtonDelete_Click" FontSize="25" Padding="0,0,0,0" Grid.Row="5" Grid.Column="2" >🗑</Button>
 
 
-        <GridSplitter Grid.Row="3" Grid.ColumnSpan="6" Height="2"
+        <GridSplitter Grid.Row="4" Grid.ColumnSpan="6" Height="1"
         HorizontalAlignment="Stretch" VerticalAlignment="Center" />
 
         <!--<Border Grid.RowSpan="5" Grid.ColumnSpan="5" Width="200" MinHeight="40" Background="#2e4e84" VerticalAlignment="Center" CornerRadius="20">
@@ -136,7 +150,7 @@
 
         <!--Width="{Binding ElementName=FatherWin, Path=Width}" Height="{Binding ElementName=FatherWin, Path=Height}"-->
 
-        <Controls:Flyout Name="FlyOutRemove" MouseLeave="FlyOutStyle_MouseLeave" Header="Delete account" Grid.Row="0" Grid.Column="0" Position="Left" Width="220" Grid.RowSpan="5" Grid.ColumnSpan="3">
+        <Controls:Flyout Name="FlyOutRemove" MouseLeave="FlyOutStyle_MouseLeave" Header="Delete account" Grid.Row="0" Grid.Column="0" Position="Left" Width="220" Grid.RowSpan="6" Grid.ColumnSpan="3">
             <StackPanel>
 
                 <Label FontSize="9" Margin="0,-25,60,5" HorizontalAlignment="Right">and cleanup usage data</Label>
@@ -147,7 +161,7 @@
 
             </StackPanel>
         </Controls:Flyout>
-        <Controls:Flyout CloseButtonVisibility="Collapsed" Name="FlyOutAttach" Grid.Row="0" Grid.Column="0" Position="Bottom" Height="100" Grid.RowSpan="5" Grid.ColumnSpan="6">
+        <Controls:Flyout CloseButtonVisibility="Collapsed" Name="FlyOutAttach" Grid.Row="0" Grid.Column="0" Position="Bottom" Height="100" Grid.RowSpan="6" Grid.ColumnSpan="6">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -176,7 +190,7 @@
 
             </Grid>
         </Controls:Flyout>
-        <Controls:Flyout CloseButtonVisibility="Hidden" HorizontalAlignment="Stretch" Name="FlyOutRegistr" Header="Register or Sign in" Grid.Row="0" Grid.Column="0" Width="1000"  Position="Left" Grid.RowSpan="5" Grid.ColumnSpan="9">
+        <Controls:Flyout CloseButtonVisibility="Hidden" HorizontalAlignment="Stretch" Name="FlyOutRegistr" Header="Register or Sign in" Grid.Row="0" Grid.Column="0" Width="1000"  Position="Left" Grid.RowSpan="6" Grid.ColumnSpan="9">
 
             <Grid>
 
@@ -262,6 +276,8 @@
                 
         </Controls:Flyout>
 
+        
+        
         <Controls:ProgressRing Name="ProgressRingLoading" IsActive="False" Grid.RowSpan="6" Grid.ColumnSpan="6"/>
 
         <!--<Grid.Background>
